# NetworkFixer

./: .gitignore  ARCHIVE_RECOMMENDATIONS.md  CHANGELOG.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  fix_network.py  pyproject.toml  requirements.txt  test_optimizations.py
.github/workflows/: release.yml
docs/: README.md
docs/archive/: IMPLEMENTATION_LOG.md  PERFORMANCE_OPTIMIZATIONS.md  REFACTOR_PLAN.md
docs/releases/: RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  RELEASE_NOTES_v2.1.0.md
networkfixer/: __init__.py
networkfixer/core/: __init__.py  adapters.py  connectivity.py  executor.py  operations.py  proxy_env.py  registry.py
networkfixer/i18n/: __init__.py  base.py  en_US.py  zh_CN.py
networkfixer/models/: __init__.py  config.py  result.py
networkfixer/ui/: __init__.py  app.py
networkfixer/utils/: __init__.py  admin.py  logger.py  thread.py
tests/: __init__.py
