[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "networkfixer"
version = "2.0.1"
description = "Lightweight Windows network repair tool for VPN/Proxy issues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NetworkFixer Team"}
]
keywords = ["network", "repair", "windows", "vpn", "proxy", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.scripts]
networkfixer = "networkfixer.ui.app:main"

[project.urls]
Homepage = "https://github.com/HYGUO1993/NetworkFixer"
Repository = "https://github.com/HYGUO1993/NetworkFixer.git"
Issues = "https://github.com/HYGUO1993/NetworkFixer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["networkfixer*"]

[tool.setuptools.package-data]
networkfixer = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
